--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -963,7 +963,7 @@
                         html += '<tr>';
                         html += '<td data-dismiss="modal">' + data.Table[i].RowNum + '</td>';
                         html += '<td class="hidecolumn" data-dismiss="modal">' + data.Table[i].ID + '</td>';
-                        html += '<td data-dismiss="modal">' + data.Table[i].CustID + '</td>';
+                        html += '<td data-dismiss="modal">' + data.Table[i].CustNo + '</td>';
                         html += '<td data-dismiss="modal">' + data.Table[i].Name + '</td>';
                         html += '<td data-dismiss="modal">' + data.Table[i].Tel + '</td>';
                         html += '<td data-dismiss="modal">' + data.Table[i].Contact + '</td>';
