--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -13,149 +13,158 @@
     </tr>
 </table>
 @* ------------------------------- grid  -------------------------------*@
-
-<table class="table table-striped">
-    <thead class="bgthead">
-        <tr>
-            <th>No.</th>
-            <th>Job No.</th>
-            <th>วันที่</th>
-            <th>ลูกค้า</th>
-            <th>เบอร์โทร</th>
-            <th class="hideANDseek">บุคคลติดต่อ</th>
-            <th class="hideANDseek">ผู้ประสานงาน</th>
-            <th class="hideANDseek">หมายเหตุ</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td>Order1</td>
-            <td>17/12/2017</td>
-            <td>บริษัท1</td>
-            <td>098xxxxxxx</td>
-            <td class="hideANDseek">บุคคลติดต่อ1</td>
-            <td class="hideANDseek">ผู้ประสานงาน1</td>
-            <td class="hideANDseek">หมายเหตุ1</td>
-            <td>
-                <a href="@Url.Action("Edit", "JobOrder")">
-                    <img src="@Url.Content("~/Images/edit.png")" />
-                </a>
-                <a href="@Url.Action("Delete", "Trachnician")">
-                    <img src="@Url.Content("~/Images/delete.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Order2</td>
-            <td>17/12/2017</td>
-            <td>บริษัท2</td>
-            <td>098xxxxxxx</td>
-            <td class="hideANDseek">บุคคลติดต่อ2</td>
-            <td class="hideANDseek">ผู้ประสานงาน2</td>
-            <td class="hideANDseek">หมายเหตุ2</td>
-            <td>
-                <a href="@Url.Action("Edit", "JobOrder")">
-                    <img src="@Url.Content("~/Images/edit.png")" />
-                </a>
-                <a href="@Url.Action("Delete", "Trachnician")">
-                    <img src="@Url.Content("~/Images/delete.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Order3</td>
-            <td>17/12/2017</td>
-            <td>บริษัท3</td>
-            <td>098xxxxxxx</td>
-            <td class="hideANDseek">บุคคลติดต่อ3</td>
-            <td class="hideANDseek">ผู้ประสานงาน3</td>
-            <td class="hideANDseek">หมายเหตุ3</td>
-            <td>
-                <a href="@Url.Action("Edit", "JobOrder")">
-                    <img src="@Url.Content("~/Images/edit.png")" />
-                </a>
-                <a href="@Url.Action("Delete", "Trachnician")">
-                    <img src="@Url.Content("~/Images/delete.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>Order4</td>
-            <td>17/12/2017</td>
-            <td>บริษัท4</td>
-            <td>098xxxxxxx</td>
-            <td class="hideANDseek">บุคคลติดต่อ4</td>
-            <td class="hideANDseek">ผู้ประสานงาน4</td>
-            <td class="hideANDseek">หมายเหตุ4</td>
-            <td>
-                <a href="@Url.Action("Edit", "JobOrder")">
-                    <img src="@Url.Content("~/Images/edit.png")" />
-                </a>
-                <a href="@Url.Action("Delete", "Trachnician")">
-                    <img src="@Url.Content("~/Images/delete.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>Order5</td>
-            <td>17/12/2017</td>
-            <td>บริษัท5</td>
-            <td>098xxxxxxx</td>
-            <td class="hideANDseek">บุคคลติดต่อ5</td>
-            <td class="hideANDseek">ผู้ประสานงาน5</td>
-            <td class="hideANDseek">หมายเหตุ5</td>
-            <td>
-                <a href="@Url.Action("Edit", "JobOrder")">
-                    <img src="@Url.Content("~/Images/edit.png")" />
-                </a>
-                <a href="@Url.Action("Delete", "Trachnician")">
-                    <img src="@Url.Content("~/Images/delete.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>Order6</td>
-            <td>17/12/2017</td>
-            <td>บริษัท6</td>
-            <td>098xxxxxxx</td>
-            <td class="hideANDseek">บุคคลติดต่อ6</td>
-            <td class="hideANDseek">ผู้ประสานงาน6</td>
-            <td class="hideANDseek">หมายเหตุ6</td>
-            <td>
-                <a href="@Url.Action("Edit", "JobOrder")">
-                    <img src="@Url.Content("~/Images/edit.png")" />
-                </a>
-                <a href="@Url.Action("Delete", "Trachnician")">
-                    <img src="@Url.Content("~/Images/delete.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>Order7</td>
-            <td>17/12/2017</td>
-            <td>บริษัท7</td>
-            <td>098xxxxxxx</td>
-            <td class="hideANDseek">บุคคลติดต่อ7</td>
-            <td class="hideANDseek">ผู้ประสานงาน7</td>
-            <td class="hideANDseek">หมายเหตุ7</td>
-            <td>
-                <a href="@Url.Action("Edit", "JobOrder")">
-                    <img src="@Url.Content("~/Images/edit.png")" />
-                </a>
-                <a href="@Url.Action("Delete", "Trachnician")">
-                    <img src="@Url.Content("~/Images/delete.png")" />
-                </a>
-            </td>
-        </tr>
-    </tbody>
+<table class="barattach-2">
+    <tr>
+        <td>
+            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
+        </td>
+    </tr>
 </table>
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead class="bgthead">
+            <tr>
+                <th>No.</th>
+                <th>Job No.</th>
+                <th>วันที่</th>
+                <th>ลูกค้า</th>
+                <th>เบอร์โทร</th>
+                <th class="hideANDseek">บุคคลติดต่อ</th>
+                <th class="hideANDseek">ผู้ประสานงาน</th>
+                <th class="hideANDseek">หมายเหตุ</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Order1</td>
+                <td>17/12/2017</td>
+                <td>บริษัท1</td>
+                <td>098xxxxxxx</td>
+                <td class="hideANDseek">บุคคลติดต่อ1</td>
+                <td class="hideANDseek">ผู้ประสานงาน1</td>
+                <td class="hideANDseek">หมายเหตุ1</td>
+                <td>
+                    <a href="@Url.Action("Edit", "JobOrder")">
+                        <img src="@Url.Content("~/Images/edit.png")" />
+                    </a>
+                    <a href="@Url.Action("Delete", "Trachnician")">
+                        <img src="@Url.Content("~/Images/delete.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Order2</td>
+                <td>17/12/2017</td>
+                <td>บริษัท2</td>
+                <td>098xxxxxxx</td>
+                <td class="hideANDseek">บุคคลติดต่อ2</td>
+                <td class="hideANDseek">ผู้ประสานงาน2</td>
+                <td class="hideANDseek">หมายเหตุ2</td>
+                <td>
+                    <a href="@Url.Action("Edit", "JobOrder")">
+                        <img src="@Url.Content("~/Images/edit.png")" />
+                    </a>
+                    <a href="@Url.Action("Delete", "Trachnician")">
+                        <img src="@Url.Content("~/Images/delete.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Order3</td>
+                <td>17/12/2017</td>
+                <td>บริษัท3</td>
+                <td>098xxxxxxx</td>
+                <td class="hideANDseek">บุคคลติดต่อ3</td>
+                <td class="hideANDseek">ผู้ประสานงาน3</td>
+                <td class="hideANDseek">หมายเหตุ3</td>
+                <td>
+                    <a href="@Url.Action("Edit", "JobOrder")">
+                        <img src="@Url.Content("~/Images/edit.png")" />
+                    </a>
+                    <a href="@Url.Action("Delete", "Trachnician")">
+                        <img src="@Url.Content("~/Images/delete.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Order4</td>
+                <td>17/12/2017</td>
+                <td>บริษัท4</td>
+                <td>098xxxxxxx</td>
+                <td class="hideANDseek">บุคคลติดต่อ4</td>
+                <td class="hideANDseek">ผู้ประสานงาน4</td>
+                <td class="hideANDseek">หมายเหตุ4</td>
+                <td>
+                    <a href="@Url.Action("Edit", "JobOrder")">
+                        <img src="@Url.Content("~/Images/edit.png")" />
+                    </a>
+                    <a href="@Url.Action("Delete", "Trachnician")">
+                        <img src="@Url.Content("~/Images/delete.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Order5</td>
+                <td>17/12/2017</td>
+                <td>บริษัท5</td>
+                <td>098xxxxxxx</td>
+                <td class="hideANDseek">บุคคลติดต่อ5</td>
+                <td class="hideANDseek">ผู้ประสานงาน5</td>
+                <td class="hideANDseek">หมายเหตุ5</td>
+                <td>
+                    <a href="@Url.Action("Edit", "JobOrder")">
+                        <img src="@Url.Content("~/Images/edit.png")" />
+                    </a>
+                    <a href="@Url.Action("Delete", "Trachnician")">
+                        <img src="@Url.Content("~/Images/delete.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Order6</td>
+                <td>17/12/2017</td>
+                <td>บริษัท6</td>
+                <td>098xxxxxxx</td>
+                <td class="hideANDseek">บุคคลติดต่อ6</td>
+                <td class="hideANDseek">ผู้ประสานงาน6</td>
+                <td class="hideANDseek">หมายเหตุ6</td>
+                <td>
+                    <a href="@Url.Action("Edit", "JobOrder")">
+                        <img src="@Url.Content("~/Images/edit.png")" />
+                    </a>
+                    <a href="@Url.Action("Delete", "Trachnician")">
+                        <img src="@Url.Content("~/Images/delete.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Order7</td>
+                <td>17/12/2017</td>
+                <td>บริษัท7</td>
+                <td>098xxxxxxx</td>
+                <td class="hideANDseek">บุคคลติดต่อ7</td>
+                <td class="hideANDseek">ผู้ประสานงาน7</td>
+                <td class="hideANDseek">หมายเหตุ7</td>
+                <td>
+                    <a href="@Url.Action("Edit", "JobOrder")">
+                        <img src="@Url.Content("~/Images/edit.png")" />
+                    </a>
+                    <a href="@Url.Action("Delete", "Trachnician")">
+                        <img src="@Url.Content("~/Images/delete.png")" />
+                    </a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
 @* ------------------------------- grid  -------------------------------*@
 
