--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -17,9 +17,9 @@
 
 		$('#calendar').fullCalendar({
 			header: {
-				left: 'prev,next today',
+				left: 'prev,next',
 				center: 'title',
-				right: 'month,agendaWeek,agendaDay,listWeek'
+				right: ''
 			},
 			defaultDate: '2017-01-18',
 			navLinks: true, // can click day/week names to navigate views
