--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -34,18 +34,10 @@
     }
 </style>
 @* ------------------------------- Header -------------------------------*@
-<table class="btnAdd">
-    <tr>
-        <td>
-            <div class="topictd">List</div>
-            <a href="/ExpenseMaster/CreateExpenseMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
-        </td>
-    </tr>
-</table>
-
 <table class="barattach-2">
     <tr>
         <td>
+            <a href="/ExpenseMaster/CreateExpenseMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd-2" /></a>
             <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
         </td>
     </tr>
