--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -779,7 +779,9 @@
                                         <div class="clr"></div>
                                     </div>
                                     <div>
-                                        <a href="@Url.Action("CreateBorrow", "Borrow")" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
+                                        <div class="barattach-2">
+                                            <a href="@Url.Action("CreateBorrow", "Borrow")" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
+                                        </div>
                                         <div class="grigbar">
                                             <table class="table table-striped">
                                                 <thead class="bgthead">
