--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -147,8 +147,8 @@
     position: absolute;
     /* padding-top: 5px; */
     /* margin-left: 5px; */
-    top:414px;
-    left:100px;
+    margin-top: 10px;
+    margin-left: 10px;
     z-index: 1;
 }
 .btnimage-3{
@@ -163,8 +163,8 @@
     position: absolute;
     /* padding-top: 5px; */
     /* margin-left: 5px; */
-    top:685px;
-    left:100px;
+    margin-top: 10px;
+    margin-left: 10px;
     z-index: 1;
 }
  @media screen and (max-width:680px) {
@@ -182,8 +182,8 @@
         position: absolute;
         /* padding-top: 5px; */
         /* margin-left: 5px; */
-        margin-top: 90%;
-        left: 40px;
+        margin-top: 3%;
+        margin-left: 10px;
         z-index: 1;
     }
             .btnimage-3{
@@ -895,7 +895,15 @@ select{
 .barattach-2{
     margin-top: 0px;
     width: 100%;
+    height: 40px;
     background-color: #5baa8c;
+}
+.imgadd{
+    margin-left:10px;
+}
+.imgadd-2{
+    margin-left:10px;
+    margin-top:8px;
 }
 .tabbar{
     margin-top: 0px;
@@ -948,13 +956,13 @@ select{
     color: #FFFFFF;
     font-size: 14px;
     font-weight: bold;
-    float: left;
+    float: right;
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-right:5px;
-    /*margin-right: 87%;*/
-    /*margin-left: 8px;*/
-    margin-left: 80%;
+    padding-right: 5px;
+    /* margin-right: 87%; */
+    /* margin-left: 8px; */
+    margin-left: 75%;
     margin-right: 0%;
 }
  @media screen and (max-width:680px) {
@@ -987,13 +995,13 @@ select{
         color: #FFFFFF;
         font-size: 14px;
         font-weight: bold;
-        float: left;
+        float: right;
         padding-top: 5px;
         padding-bottom: 5px;
         padding-right:5px;
         /*margin-right: 87%;*/
         /*margin-left: 8px;*/
-        margin-left: 15%;
+        margin-left: 5%;
         margin-right: 0%;
     }
 }
