--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -5,15 +5,6 @@
 <h2>BreakDownCost</h2>
 
 @*<br />*@
-@* ------------------------------- Header -------------------------------*@
-<table class="btnAdd">
-    <tr>
-        <td>
-            <div class="topictd">List</div>
-            <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
-        </td>
-    </tr>
-</table>
 @* ------------------------------- grid  -------------------------------*@
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
 <style>
@@ -49,35 +40,35 @@
 <table class="barattach-2">
     <tr>
         <td>
-
+            <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd-2"/></a>
             <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
         </td>
     </tr>
 </table>
 
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead class="bgthead">
+            <tr>
+                <th>No.</th>
+                <th class="hidecolumn">ID</th>
+                <th>Doc Version</th>
+                <th>ใบเสนอราคา</th>
+                <th>ราคาขาย</th>
+                <th>ราคาทุน</th>
+                <th>กำไร</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody id="result"></tbody>
+    </table>
+</div>
+    @*<table id="result"></table>*@
 
-<table class="table table-striped">
-    <thead class="bgthead">
-        <tr>
-            <th>No.</th>
-            <th class="hidecolumn">ID</th>
-            <th>Doc Version</th>
-            <th>ใบเสนอราคา</th>
-            <th>ราคาขาย</th>
-            <th>ราคาทุน</th>
-            <th>กำไร</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody id="result"></tbody>
-</table>
 
-@*<table id="result"></table>*@
+    @* ------------------------------- grid  -------------------------------*@
 
-
-@* ------------------------------- grid  -------------------------------*@
-
-<script>
+    <script>
     $(document).ready(function () {
 
 
@@ -178,4 +169,4 @@
 
             });
     }
-</script>
+    </script>
