--- a/Alpha/AlphaMvc/Views/Employee/EditEmployee.cshtml
+++ b/Alpha/AlphaMvc/Views/Employee/EditEmployee.cshtml
@@ -62,15 +62,15 @@
                                 <div class="resp-tabs-container hor_1">
                                     <div>
                                         <div class="grigbar">
-                                            <table id="example" class="display" cellspacing="0">
-                                                <thead>
+                                            <table class="table table-striped">
+                                                <thead class="bgthead">
                                                     <tr>
                                                         <th>No.</th>
                                                         <th>บริษัท</th>
                                                         <th>ประเภทบัตร</th>
                                                         <th>วันออกบัตร</th>
                                                         <th>วันหมดอายุ</th>
-                                                        
+
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -80,7 +80,7 @@
                                                         <td>ประเภท1</td>
                                                         <td>17/12/2015</td>
                                                         <td>17/12/2016</td>
-                                                        
+
                                                     </tr>
                                                     <tr>
                                                         <td>2</td>
@@ -88,7 +88,7 @@
                                                         <td>ประเภท2</td>
                                                         <td>17/12/2015</td>
                                                         <td>17/12/2016</td>
-                                                        
+
                                                     </tr>
                                                     <tr>
                                                         <td>3</td>
@@ -96,7 +96,7 @@
                                                         <td>ประเภท3</td>
                                                         <td>17/12/2015</td>
                                                         <td>17/12/2016</td>
-                                                        
+
                                                     </tr>
                                                     <tr>
                                                         <td>4</td>
@@ -104,7 +104,7 @@
                                                         <td>ประเภท4</td>
                                                         <td>17/12/2015</td>
                                                         <td>17/12/2016</td>
-                                                        
+
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -112,8 +112,8 @@
                                     </div>
                                     <div>
                                         <div class="grigbar">
-                                            <table id="example2" class="display" cellspacing="0">
-                                                <thead>
+                                            <table class="table table-striped">
+                                                <thead class="bgthead">
                                                     <tr>
                                                         <th>No.</th>
                                                         <th>Skill</th>
@@ -123,22 +123,22 @@
                                                     <tr>
                                                         <td>1</td>
                                                         <td>Skill1</td>
-                                                        
+
                                                     </tr>
                                                     <tr>
                                                         <td>2</td>
                                                         <td>Skill2</td>
-                                                        
+
                                                     </tr>
                                                     <tr>
                                                         <td>3</td>
                                                         <td>Skill3</td>
-                                                        
+
                                                     </tr>
                                                     <tr>
                                                         <td>4</td>
                                                         <td>Skill4</td>
-                                                        
+
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -146,13 +146,13 @@
                                     </div>
                                     <div>
                                         <div class="grigbar">
-                                            <table id="example3" class="display" cellspacing="0">
-                                                <thead>
+                                            <table class="table table-striped">
+                                                <thead class="bgthead">
                                                     <tr>
                                                         <th>No.</th>
                                                         <th>File Name</th>
                                                         <th>Doc Type</th>
-                                                        
+
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -165,7 +165,7 @@
                                                         <td>2</td>
                                                         <td>File2</td>
                                                         <td>ประเภท2</td>
-                                                        
+
                                                     </tr>
                                                     <tr>
                                                         <td>3</td>
@@ -176,7 +176,7 @@
                                                         <td>4</td>
                                                         <td>File4</td>
                                                         <td>ประเภท4</td>
-                                                        
+
                                                     </tr>
                                                 </tbody>
                                             </table>
