--- a/Alpha/AlphaMvc/Views/Employee/IndexEmployee.cshtml
+++ b/Alpha/AlphaMvc/Views/Employee/IndexEmployee.cshtml
@@ -3,118 +3,119 @@
 }
 
 <h2>Teachnician</h2>
-
-<table class="table table-striped">
-    <thead class="bgthead">
-        <tr>
-            <th>No.</th>
-            <th>Emp ID</th>
-            <th class="hideANDseek">HR Code</th>
-            <th>Name</th>
-            <th class="hideANDseek">Type</th>
-            <th>ID Card</th>
-            <th>Position</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td>T00001</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>pipattra kumnuch</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>x-xxx-xxxxxx-xx-x</td>
-            <td>ช่าง1</td>
-            <td>
-                <a href="@Url.Action("EditEmployee", "Employee")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>T00002</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>pipattra kumnuch</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>x-xxx-xxxxxx-xx-x</td>
-            <td>ช่าง2</td>
-            <td>
-                <a href="@Url.Action("EditEmployee", "Employee")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>T00003</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>pipattra kumnuch</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>x-xxx-xxxxxx-xx-x</td>
-            <td>ช่าง3</td>
-            <td>
-                <a href="@Url.Action("EditEmployee", "Employee")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>T00004</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>pipattra kumnuch</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>x-xxx-xxxxxx-xx-x</td>
-            <td>ช่าง4</td>
-            <td>
-                <a href="@Url.Action("EditEmployee", "Employee")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>T00005</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>pipattra kumnuch</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>x-xxx-xxxxxx-xx-x</td>
-            <td>ช่าง5</td>
-            <td>
-                <a href="@Url.Action("EditEmployee", "Employee")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>T00006</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>pipattra kumnuch</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>x-xxx-xxxxxx-xx-x</td>
-            <td>ช่าง6</td>
-            <td>
-                <a href="@Url.Action("EditEmployee", "Employee")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>T00007</td>
-            <td class="hideANDseek">HR-xxxx</td>
-            <td>pipattra kumnuch</td>
-            <td class="hideANDseek">พนักงานประจำ</td>
-            <td>x-xxx-xxxxxx-xx-x</td>
-            <td>ช่าง7</td>
-            <td>
-                <a href="@Url.Action("EditEmployee", "Employee")">
-                    <img src="@Url.Content("~/Images/view.png")" />
-                </a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead class="bgthead">
+            <tr>
+                <th>No.</th>
+                <th>Emp ID</th>
+                <th class="hideANDseek">HR Code</th>
+                <th>Name</th>
+                <th class="hideANDseek">Type</th>
+                <th>ID Card</th>
+                <th>Position</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>T00001</td>
+                <td class="hideANDseek">HR-xxxx</td>
+                <td>pipattra kumnuch</td>
+                <td class="hideANDseek">พนักงานประจำ</td>
+                <td>x-xxx-xxxxxx-xx-x</td>
+                <td>ช่าง1</td>
+                <td>
+                    <a href="@Url.Action("EditEmployee", "Employee")">
+                        <img src="@Url.Content("~/Images/view.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>T00002</td>
+                <td class="hideANDseek">HR-xxxx</td>
+                <td>pipattra kumnuch</td>
+                <td class="hideANDseek">พนักงานประจำ</td>
+                <td>x-xxx-xxxxxx-xx-x</td>
+                <td>ช่าง2</td>
+                <td>
+                    <a href="@Url.Action("EditEmployee", "Employee")">
+                        <img src="@Url.Content("~/Images/view.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>T00003</td>
+                <td class="hideANDseek">HR-xxxx</td>
+                <td>pipattra kumnuch</td>
+                <td class="hideANDseek">พนักงานประจำ</td>
+                <td>x-xxx-xxxxxx-xx-x</td>
+                <td>ช่าง3</td>
+                <td>
+                    <a href="@Url.Action("EditEmployee", "Employee")">
+                        <img src="@Url.Content("~/Images/view.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>T00004</td>
+                <td class="hideANDseek">HR-xxxx</td>
+                <td>pipattra kumnuch</td>
+                <td class="hideANDseek">พนักงานประจำ</td>
+                <td>x-xxx-xxxxxx-xx-x</td>
+                <td>ช่าง4</td>
+                <td>
+                    <a href="@Url.Action("EditEmployee", "Employee")">
+                        <img src="@Url.Content("~/Images/view.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>T00005</td>
+                <td class="hideANDseek">HR-xxxx</td>
+                <td>pipattra kumnuch</td>
+                <td class="hideANDseek">พนักงานประจำ</td>
+                <td>x-xxx-xxxxxx-xx-x</td>
+                <td>ช่าง5</td>
+                <td>
+                    <a href="@Url.Action("EditEmployee", "Employee")">
+                        <img src="@Url.Content("~/Images/view.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>T00006</td>
+                <td class="hideANDseek">HR-xxxx</td>
+                <td>pipattra kumnuch</td>
+                <td class="hideANDseek">พนักงานประจำ</td>
+                <td>x-xxx-xxxxxx-xx-x</td>
+                <td>ช่าง6</td>
+                <td>
+                    <a href="@Url.Action("EditEmployee", "Employee")">
+                        <img src="@Url.Content("~/Images/view.png")" />
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>T00007</td>
+                <td class="hideANDseek">HR-xxxx</td>
+                <td>pipattra kumnuch</td>
+                <td class="hideANDseek">พนักงานประจำ</td>
+                <td>x-xxx-xxxxxx-xx-x</td>
+                <td>ช่าง7</td>
+                <td>
+                    <a href="@Url.Action("EditEmployee", "Employee")">
+                        <img src="@Url.Content("~/Images/view.png")" />
+                    </a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
