--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -4,15 +4,14 @@
 
 <h2>Master Income</h2>
 @* ------------------------------- Header -------------------------------*@
-<table class="btnAdd">
+<table class="barattach-2">
     <tr>
         <td>
-            <div class="topictd">List</div>
-            <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" /></a>
+            <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd-2" /></a>
+            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
         </td>
     </tr>
 </table>
-<script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
 
 <style>
     .paging-nav {
@@ -42,15 +41,6 @@
         font-family: Arial, sans-serif;
     }
 </style>
-
-
-<table class="barattach-2">
-    <tr>
-        <td>
-            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
-        </td>
-    </tr>
-</table>
 
     <table class="table table-striped">
         <thead class="bgthead">
