--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -58,7 +58,7 @@
                         <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" />
                     </li>
                     <li>
-                        <input type="text" id = "Docver"  name="field1" class="field-select-small-2" placeholder="V1" disabled />
+                        <input type="text" id = "txtDocver"  name="field1" class="field-select-small-2" placeholder="V1" disabled />
                     </li>
                     <li>
                         <label>ใบเสนอราคา<span class="required">*</span></label>
@@ -70,17 +70,17 @@
                 <ul class="form-style-1">
                     <li>
                         <label class="label-big">ราคาขาย<span class="required">*</span></label>&nbsp;<label class="label-small">ราคาทุน<span class="required">*</span></label>
-                        <input type="text" id = "Price" name="field1" class="field-divided" placeholder="ราคาขาย" />&nbsp;<input type="text" id = "Cost" name="field2" class="field-divided" placeholder="ราคาทุน" />
+                        <input type="text" id = "txtPrice" name="field1" class="field-divided" placeholder="ราคาขาย" />&nbsp;<input type="text" id = "txtCost" name="field2" class="field-divided" placeholder="ราคาทุน" />
                     </li>
                     <li>
                         <label>กำไร<span class="required">*</span></label>
-                        <input type="text" id = "Profit" name="field1" class="field-divided" placeholder="กำไร" />
+                        <input type="text" id = "txtProfit" name="field1" class="field-divided" placeholder="กำไร" />
                     </li>
                 </ul>
                 <ul class="form-style-1">
                     <li>
                         <label>หมายเหตุ<span class="required">*</span></label>
-                        <textarea name="field5" id = "Remark" class="field-long field-textarea"></textarea>
+                        <textarea name="field5" id = "txtRemark" class="field-long field-textarea"></textarea>
                     </li>
                     <br />
                 </ul>
@@ -256,31 +256,15 @@
                     </td>
                 </tr>
             </table>
-            
+            <ul class="form-style-1">
+                <li>
+                    <input type="submit" value="Save" id="Create" />
+                </li>
+            </ul>
         </form>
     }
 </div>
 <script>
-    $(function () {
-        $("#dialog").dialog({
-            height: "auto",
-            width: 550,
-            modal: true,
-            autoOpen: false,
-            show: {
-                effect: "blind",
-                duration: 1000
-            },
-            hide: {
-                effect: "explode",
-                duration: 1000
-            }
-        });
-
-        $("#opener").on("click", function () {
-            $("#dialog").dialog("open");
-        });
-    });
     $(document).ready(function () {
         $("#quotationBody").on("click", "tr", function (e) {
             $("#txtQuoNo").val($(this).find("td:eq(2)").text());
@@ -306,7 +290,6 @@
                        html += '</tr>';
                    }
                    document.getElementById("quotationBody").innerHTML = html;
-                   alert('test');
                },
                error: function (msg) {
                    alert(msg)
@@ -315,8 +298,8 @@
 
         $("#Create").click(function () {
             var dataObject = {
-                Docver: 1, QuotationNo: 1, Price: $("#Price").val(), Cost: $("#Cost").val(),
-                Profit: $("#Profit").val(), Remark: $("#Remark").val()
+                Docver: 1, QuotationNo: $("#hidQuoID").val(), Price: $("#txtPrice").val(), Cost: $("#txtCost").val(),
+                Profit: $("#txtProfit").val(), Remark: $("#txtRemark").val()
             };
             console.log(dataObject);
             $.ajax(
