--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -131,7 +131,7 @@
                     html += '<td>' + data.Table[i].RowNum + '</td>';
                     html += '<td class="hidecolumn">' + data.Table[i].ID + '</td>';
                     html += '<td>' + data.Table[i].Docver + '</td>';
-                    html += '<td>' + data.Table[i].QuotationNo + '</td>';
+                    html += '<td>' + data.Table[i].QuoNo + '</td>';
                     html += '<td>' + data.Table[i].Price + '</td>';
                     html += '<td>' + data.Table[i].Cost + '</td>';
                     html += '<td>' + data.Table[i].Profit + '</td>';
