--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -57,7 +57,7 @@
             <ul class="form-style-1">
                 <li>
                     <label>รายละเอียด<span class="required">*</span></label>
-                    <input type="text" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" />
+                    <input type="text" id="txtJobNo" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" />
                 </li>
                 <li>
                     <input type="text" id="datepicker" class="field-divided" placeholder="วันที่" />&nbsp;<input type="text" name="field1" class="field-divided" placeholder="รถปิกอัพ" />
